# voyager-trader

./: .coverage  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CURRICULUM_VALIDATION.md  LICENSE  Makefile  README.md  VOYAGER-Trader_PDR_v3.md  coverage.json  coverage.xml  goals.md  pyproject.toml  requirements.txt  start_admin.py  test_admin_setup.py
.github/: CLAUDE_DEVELOPMENT.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  TDD_GUIDELINES.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-close-issues.yml  ci.yml  claude-code-review.yml  dependency-update.yml  pr-adr-check.yml  pr-auto-review-fix.yml  release.yml  tag-on-merge.yml
.github/workflows/off/: dependency-update.yml
admin-ui/: .env.template  README.md  package-lock.json  package.json
admin-ui/public/: index.html
admin-ui/src/: App.js
admin-ui/src/components/: Dashboard.js  Login.js  LogsPanel.js  PerformanceChart.js  ProtectedRoute.js  SkillsTable.js  SystemStatus.js
admin-ui/src/services/: api.js
admin-ui/src/utils/: logger.js
config/: llm_service_example.yaml  persistence.example.env
docs/: automation-system.md  caching-quick-reference.md  database-connection-health.md  frontend-logging.md  llm-service-usage.md  persistent-storage.md  security-improvements-summary.md  security.md  skill-caching-optimization.md  sqlite-error-handling.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-python-project-structure.md  0002-voyager-trader-core-architecture.md  0003-build-tool-choices.md  0003-three-component-learning-pattern.md  0004-dependency-injection-framework.md  0004-testing-framework-selection.md  0005-configuration-management.md  0006-logging-and-monitoring.md  0007-error-handling-fault-tolerance.md  0008-data-persistence-layer.md  0009-domain-models-and-data-structures.md  0010-automatic-curriculum-system-architecture.md  0011-python-version-standardization.md  0012-skill-library-architecture.md  0013-skill-operations-observability.md  0014-iterative-prompting-architecture.md  0015-centralized-llm-service.md  0016-market-data-integration-architecture.md  0017-trading-strategy-execution-engine.md  README.md
examples/: llm_service_examples.py
research/: 2501.07278v1.md  2504.15228v2.md  voyager.md
scripts/: demo_interactive_config.py  generate_jwt_secret.py  interactive_config.py  setup_env_template.sh  test_automation.py  test_cors.py  test_interactive_config.py  test_rate_limit.py  validate_config.py
src/voyager_trader/: __init__.py  _version.py  admin_api.py  config.py  core.py  curriculum.py  curriculum_components.py  curriculum_service.py  llm_service.py  observability.py  prompting.py  skills.py
src/voyager_trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/voyager_trader/execution/: __init__.py  executor.py  interfaces.py  manager.py  monitor.py  risk.py
src/voyager_trader/market_data/: __init__.py  cache.py  cache_warming.py  exceptions.py  fetcher.py  interfaces.py  manager.py  monitoring.py  normalizer.py  rate_limiter.py  service.py  types.py  validator.py
src/voyager_trader/market_data/sources/: __init__.py  alpha_vantage.py  mock.py  yahoo_finance.py
src/voyager_trader/models/: __init__.py  base.py  learning.py  market.py  strategy.py  system.py  trading.py  types.py
src/voyager_trader/persistence/: __init__.py  audit_service.py  circuit_breaker.py  connection_health.py  database.py  error_handling.py  repositories.py  schema.sql  simple_schema.sql  trading_service.py
tests/: __init__.py  conftest.py  test_basic.py  test_core.py  test_curriculum.py  test_curriculum_integration.py  test_iterative_prompting.py  test_llm_service.py  test_observability.py  test_prompting.py  test_security_improvements.py  test_skill_caching.py  test_skill_performance.py  test_skills.py  test_skills_comprehensive.py  test_skills_comprehensive_coverage.py
tests/execution/: __init__.py  test_executor.py  test_interfaces.py  test_risk.py
tests/market_data/: __init__.py  test_mock_source.py  test_pr_fixes.py  test_service.py  test_validator.py
tests/models/: __init__.py  test_base.py  test_learning_basic.py  test_learning_comprehensive.py  test_learning_validation.py  test_market.py  test_simple_comprehensive.py  test_strategy_basic.py  test_strategy_extended.py  test_strategy_validation.py  test_system_basic.py  test_system_comprehensive.py  test_system_validation.py  test_trading_basic.py  test_trading_extended.py  test_trading_validation.py  test_types.py
tests/persistence/: __init__.py  test_audit_service.py  test_circuit_breaker.py  test_connection_health.py  test_database.py  test_error_handling.py  test_repositories.py  test_trading_service.py
